K8S/portfolio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: default
spec:
  replicas: 3
  minReadySeconds: 15
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: freddyt18/portfolio:latest
          imagePullPolicy: "Always"
          # resources: #default
          #   requests:
          #     memory: "64Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 18080
