K8S/portfolio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "portfolio"
  namespace: default
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
    - name: portfolio
      port: 80 # Port of the service
      targetPort: 80 # Port of the container
      protocol: TCP
