K8S/portfolio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ingress-devops
spec:
  tls:
  - hosts:
    - portfolio.pitou.live
    secretName: tls-secret
  rules:
  - host: portfolio.pitou.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio
            port:
              number: 80
